1.Added Code Summary Element 2.Changed Design of Send Feedback Dialog,Invite Friend Dialog 3.Minor CSS issues changed

--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -93,6 +93,12 @@
             --paper-tooltip-opacity: 1.0;
             --paper-tooltip-background: teal;
         }
+        paper-icon-button{
+            --paper-icon-button:{
+                color:#cc4444;
+            };
+
+        }
 
 	</style>
 	
