--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -94,6 +94,12 @@
             position: relative;
             top:20px;
         }
+        #post-header{
+            background-color: #fff;
+        }
+        aq-community-postdetail-content{
+            --aq-community-postdetail-content-background-color:#fafafb;
+        }
     </style>
 
     <template>
