--- a/src/components/common/aq-tags-input-container.html
+++ b/src/components/common/aq-tags-input-container.html
@@ -45,7 +45,7 @@
                 margin-bottom: 5px;
                 color: #24293d;
                 position: relative;
-                background-color: #f2f2f2;
+                background-color: var(--tags-container-background-color,#f2f2f2);
                 padding-left: var(--tags-container-padding-left,10px);
                 width:100%;
             }
