--- a/src/components/editor/aq-editor-sidebar-run.html
+++ b/src/components/editor/aq-editor-sidebar-run.html
@@ -7,7 +7,7 @@
 <link rel="import" href="../../../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../../bower_components/vaadin-date-picker/vaadin-date-picker.html">
-<link rel="import" href="../common/group-selector.html">
+<link rel="import" href="../common/aq-group-selector.html">
 <dom-module id='aq-editor-sidebar-run'>
     <style include="iron-flex iron-flex-alignment iron-positioning"></style>
 
