Strategy Editor Design COMPLETE! Modified backtest metric-item list to show only few metrics when backtest is active Bug fix: Renaming of group-selector Modified layouts of sidebar run and log Changed color scheme of editor-toolbar

--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -117,8 +117,8 @@
         	--paper-card:{
 	        	color: #24293d;
 	            margin: 0 auto;
-        	};
-            background-color: var(--aq-backtest-detail-item-background-color,#fff);
+	            height: 100%;
+            }
         }
 
         .card-content{
@@ -146,13 +146,13 @@
                 <div class="lower-container flex">
                 	<template is='dom-if' if='{{metrics}}'>
                 		<aq-backtest-metric-item-list 
-                			metric-items = "{{metrics}}">
+                			metric-items = "{{metrics}}"
+                			active="{{active}}">
             			</aq-backtest-metric-item-list> 
                 	</template>
                 </div>
 
-                
-                                <div class="layout horizontal">
+                <div class="layout horizontal">
 	                <div class="flex"></div>
 	                <paper-tabs noink selected="{{graphType}}">
 	                    <paper-tab>Cumulative Return</paper-tab>
