--- a/src/components/aq-profile-img.html
+++ b/src/components/aq-profile-img.html
@@ -1,7 +1,7 @@
 <link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../icons/aq-iconset.html'>
 
-<dom-module id="profile-img">
+<dom-module id="aq-profile-img">
   <style  include="iron-flex iron-flex-alignment">
   </style>
 
@@ -58,7 +58,7 @@
 
 <script>
   Polymer({
-    is: 'profile-img',
+    is: 'aq-profile-img',
     properties: {
       selected: {
         type: Boolean,
