--- a/src/components/aq-user-menu.html
+++ b/src/components/aq-user-menu.html
@@ -3,7 +3,7 @@
 <link rel='import' href='../../bower_components/iron-signals/iron-signals.html'>
 
 
-<link rel="import" href="./profile-img.html">
+<link rel="import" href="aq-profile-img.html">
 
 <dom-module id='aq-user-menu'>
     <style  include="iron-flex iron-flex-alignment">
