--- a/src/components/common/aq-group-selector.html
+++ b/src/components/common/aq-group-selector.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 
-<dom-module id="group-selector">
+<dom-module id="aq-group-selector">
     <style>
         .iron-selected {
             border: 1px solid teal;
@@ -31,7 +31,7 @@
     </template>
     <script>
         Polymer({
-            is:"group-selector",
+            is:"aq-group-selector",
             properties:{
                 name:{
                     type:String
