--- a/src/components/editor/aq-editor-sidebar-run.html
+++ b/src/components/editor/aq-editor-sidebar-run.html
@@ -262,7 +262,7 @@
                             <td><span class="input-span">Rebalance</span></td>
                             <td>
                                 <div class="button-select-container layout horizontal">
-                                    <group-selector event-name="rebalance-selected" items="{{rebalanceOptions}}"></group-selector>
+                                    <aq-group-selector event-name="rebalance-selected" items="{{rebalanceOptions}}"></aq-group-selector>
                                 </div>
                             </td>
                         </tr>
@@ -270,7 +270,7 @@
                             <td><span class="input-span">Cancel Policy</span></td>
                             <td>
                                 <div class="button-select-container layout horizontal">
-                                    <group-selector event-name="cancel-policy-selected" items="{{cancelOptions}}"></group-selector>
+                                    <aq-group-selector event-name="cancel-policy-selected" items="{{cancelOptions}}"></aq-group-selector>
                                 </div>
                             </td>
                         </tr>
@@ -278,7 +278,7 @@
                             <td><span class="input-span">Resolution</span></td>
                             <td>
                                 <div class="button-select-container layout horizontal">
-                                    <group-selector event-name="resolution-selected" items="{{resolutionOptions}}"></group-selector>
+                                    <aq-group-selector event-name="resolution-selected" items="{{resolutionOptions}}"></aq-group-selector>
                                 </div>
                             </td>
                         </tr>
@@ -290,7 +290,7 @@
                                        on-keydown="checkForKeys" on-blur='close' step="0.01" min=0>
                                 <div class="split-bar"></div>
                                 <div style="display: inline-block;margin-left: 15px;" class="button-select-container layout horizontal">
-                                    <group-selector event-name="commision-selected" items="{{commissionOptions}}"></group-selector>
+                                    <aq-group-selector event-name="commision-selected" items="{{commissionOptions}}"></aq-group-selector>
                                 </div>
                             </td>
                         </tr>
@@ -302,7 +302,7 @@
                                        on-keydown="checkForKeys" on-blur='close' step="0.01" min=0>
                                 <div class="split-bar"></div>
                                 <div style="display: inline-block;margin-left: 15px;" class="button-select-container layout horizontal">
-                                    <group-selector event-name="slippage-selected" items="{{slippageOptions}}"></group-selector>
+                                    <aq-group-selector event-name="slippage-selected" items="{{slippageOptions}}"></aq-group-selector>
                                 </div>
                             </td>
                         </tr>
@@ -310,7 +310,7 @@
                             <td><span class="input-span">Investment Plan</span></td>
                             <td>
                                 <div class="button-select-container layout horizontal">
-                                    <group-selector event-name="investment-plan-selected" items="{{investmentPlanOptions}}"></group-selector>
+                                    <aq-group-selector event-name="investment-plan-selected" items="{{investmentPlanOptions}}"></aq-group-selector>
                                 </div>
                             </td>
                         </tr>
