--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -1,7 +1,7 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel="import" href="../help/aq-help-marked-item.html">
 <link rel="import" href="../common/aq-backtest-detail-item.html">
-<link rel="import" href="../profile-img.html">
+<link rel="import" href="../aq-profile-img.html">
 <link rel="import" href="../common/aq-profile-pic-element.html">
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 <link rel="import" href="../common/aq-label-content-item.html">
