--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -3,7 +3,7 @@
 <link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
 
 <link rel="import" href="./aq-community-postdetail-content.html">
-<link rel="import" href="../profile-img.html">
+<link rel="import" href="../aq-profile-img.html">
 <link rel='import' href='../../icons/aq-iconset.html'>
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 <link rel="import" href="../common/aq-profile-pic-element.html">
