Fixed usage issues of aq-profile-img element

--- a/src/components/aq-user-menu.html
+++ b/src/components/aq-user-menu.html
@@ -70,7 +70,7 @@
          <iron-signals on-iron-signal-dirtybit='onSetDirtyBit'></iron-signals>
 
         <paper-menu-button id = 'userMenu' on-focus-out='onBlur' horizontal-offset=-250 vertical-offset=48>
-            <profile-img letter="[[letter]]" class="dropdown-trigger"></profile-img>
+            <aq-profile-img letter="[[letter]]" class="dropdown-trigger"></aq-profile-img>
 
             <div class="dropdown-content">
                 <div id='top' class="layout horizontal">
