--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -117,7 +117,7 @@
     <template>
         <div id='post-content'>
             <div id='author' class="layout horizontal center">
-                <profile-img id='img' letter="[[getinitials(postContent)]]" class="self-end"></profile-img>
+                <aq-profile-img id='img' letter="[[getinitials(postContent)]]" class="self-end"></aq-profile-img>
                 <div id='author-desc' class="layout vertical self-center">
                   <span id="author-name">by 
                     <span class="author-name-detail">[[postContent.user.firstName]] [[postContent.user.lastName]]</span>
