--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -127,7 +127,7 @@
                 margin-left: 20px;
             }
 
-            profile-img,profile-pic-element {
+            aq-profile-img,profile-pic-element {
                 margin-right: 10px;
             }
 
@@ -191,8 +191,8 @@
             <div class="bar"></div>
             
             <div class="layout horizontal center">
-                  <profile-img id='img' class="self-start"
-                               letter="[[getInitials(thread.user.firstName, thread.user.lastName)]]"></profile-img>
+                  <aq-profile-img id='img' class="self-start"
+                               letter="[[getInitials(thread.user.firstName, thread.user.lastName)]]"></aq-profile-img>
 
                   <div class="post-container layout vertical">
                       <h3 class="by"><span class="user-name">[[getAuthorFullName(thread.user.firstName, thread.user.lastName)]]</span>
